--- a/k8s/yolo5/deployment.yaml
+++ b/k8s/yolo5/deployment.yaml
@@ -16,7 +16,7 @@ spec:
         - name: regcred
       containers:
         - name: yolo5
-          image: omerk160/yolo5:1.0.59
+          image: guymeltzer/yolo5:1.0.84
           ports:
             - containerPort: 5000
           resources:
