--- a/k8s/yolo5/deployment.yaml
+++ b/k8s/yolo5/deployment.yaml
@@ -12,8 +12,8 @@ spec:
       labels:
         app: yolo5
     spec:
-      imagePullSecrets:
-        - name: regcred
+      #imagePullSecrets:
+      #  - name: regcred
       containers:
         - name: yolo5
           image: guymeltzer/yolo5:1.0.84
