--- a/k8s/Polybot/deployment.yaml
+++ b/k8s/Polybot/deployment.yaml
@@ -24,7 +24,7 @@ spec:
             secretName: polybot-tls
       containers:
         - name: polybot
-          image: omerk160/polybot:1.0.100
+          image: guymeltzer/polybot:1.0.111
           ports:
             - containerPort: 30619
           volumeMounts:
