--- a/k8s/Polybot/ingress.yaml
+++ b/k8s/Polybot/ingress.yaml
@@ -1,38 +1,35 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  annotations:
-    alb.ingress.kubernetes.io/subnets: subnet-0ed67db09e8253867,subnet-0e3a0dc40687f7000
-    alb.ingress.kubernetes.io/target-type: instance
-    kubectl.kubernetes.io/last-applied-configuration: |
-      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"alb.ingress.kubernetes.io/subnets":"subnet-0ed67db09e8253867,subnet-0e3a0dc40687f7000","alb.ingress.kubernetes.io/target-type":"instance","kubernetes.io/ingress.class":"alb"},"finalizers":["ingress.k8s.aws/resources"],"labels":{"app.kubernetes.io/instance":"polybot-app"},"name":"polybot-ingress","namespace":"default"},"spec":{"rules":[{"host":"guy-polybot-lg.devops-int-college.com","http":{"paths":[{"backend":{"service":{"name":"polybot-service","port":{"number":30219}}},"path":"/","pathType":"Prefix"},{"backend":{"service":{"name":"polybot-service","port":{"number":30219}}},"path":"/health","pathType":"Prefix"}]}}],"tls":[{"hosts":["guy-polybot-lg.devops-int-college.com"],"secretName":"polybot-tls"}]}}
-    kubernetes.io/ingress.class: alb
-  finalizers:
-    - ingress.k8s.aws/resources
-  labels:
-    app.kubernetes.io/instance: polybot-app
   name: polybot-ingress
   namespace: default
+  labels:
+    app.kubernetes.io/instance: polybot-app
+  annotations:
+    # Optional NGINX-specific annotations (customize as needed)
+    nginx.ingress.kubernetes.io/rewrite-target: /  # Rewrites the URL if needed
+    nginx.ingress.kubernetes.io/ssl-redirect: "true"  # Enforces HTTPS
 spec:
+  ingressClassName: nginx  # Matches the NGINX Ingress Controller
   rules:
     - host: omer-polybot-lb.devops-int-college.com
       http:
         paths:
-          - backend:
+          - path: /
+            pathType: Prefix
+            backend:
               service:
                 name: polybot-service
                 port:
-                  number: 30219
-            path: /
+                  number: 30619  # Matches your new port
+          - path: /health
             pathType: Prefix
-          - backend:
+            backend:
               service:
                 name: polybot-service
                 port:
-                  number: 30219
-            path: /health
-            pathType: Prefix
+                  number: 30619
   tls:
     - hosts:
         - omer-polybot-lb.devops-int-college.com
-      secretName: polybot-tls
+      secretName: polybot-tls  # Ensure this secret exists
