--- a/k8s/Polybot/deployment.yaml
+++ b/k8s/Polybot/deployment.yaml
@@ -26,7 +26,7 @@ spec:
         - name: polybot
           image: guymeltzer/polybot:1.0.111
           ports:
-            - containerPort: 30219
+            - containerPort: 31804  # Keeping this as 30219 (app-level port)
           volumeMounts:
             - name: polybot-certs
               mountPath: "/app/certs"
@@ -39,10 +39,8 @@ spec:
                   key: token
             - name: MONGO_URI
               value: "mongodb://mongodb-0.mongodb.mongodb.svc.cluster.local:27017,mongodb-1.mongodb.mongodb.svc.cluster.local:27017,mongodb-2.mongodb.mongodb.svc.cluster.local:27017/?replicaSet=rs0"
-
             - name: TELEGRAM_APP_URL
               valueFrom:
                 secretKeyRef:
                   name: telegram-app-url-secret
                   key: TELEGRAM_APP_URL
-            # AWS Secrets Manager will be used in the application code
