--- a/k8s/Polybot/deployment.yaml
+++ b/k8s/Polybot/deployment.yaml
@@ -31,8 +31,8 @@ spec:
             - name: TELEGRAM_TOKEN
               valueFrom:
                 secretKeyRef:
-                  name: telegram-secret
-                  key: token
+                  name: omer-polybot-secrets
+                  key: TELEGRAM_TOKEN
             - name: MONGO_URI
               value: "mongodb://mongodb-0.mongodb.mongodb.svc.cluster.local:27017,mongodb-1.mongodb.mongodb.svc.cluster.local:27017,mongodb-2.mongodb.mongodb.svc.cluster.local:27017/?replicaSet=rs0"
             - name: TELEGRAM_APP_URL
