--- a/k8s/Polybot/ingress.yaml
+++ b/k8s/Polybot/ingress.yaml
@@ -7,7 +7,7 @@ metadata:
     app.kubernetes.io/instance: polybot-app
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
-    nginx.ingress.kubernetes.io/ssl-redirect: "true"
+    nginx.ingress.kubernetes.io/ssl-redirect: "false"  # ALB handles TLS
 spec:
   ingressClassName: nginx
   rules:
@@ -20,15 +20,11 @@ spec:
               service:
                 name: polybot-service
                 port:
-                  number: 31804  # Aligned with service and deployment
+                  number: 31804  # Matches service and deployment
           - path: /health
             pathType: Prefix
             backend:
               service:
                 name: polybot-service
                 port:
-                  number: 31804  # Aligned with service and deployment
-  tls:
-    - hosts:
-        - omer-polybot-lb.devops-int-college.com
-      secretName: polybot-tls
+                  number: 31804  # Matches service and deployment
