--- a/k8s/Polybot/service.yaml
+++ b/k8s/Polybot/service.yaml
@@ -7,11 +7,11 @@ metadata:
     app.kubernetes.io/instance: polybot-app
 spec:
   ports:
-    - name: https-port
+    - name: http-port  # Changed to http-port since Flask uses HTTP
       port: 31804  # Service port exposed to Ingress
       protocol: TCP
       targetPort: 31804  # Matches containerPort in deployment
-      nodePort: 31805  # For NodePort type, must be in range 30000-32767
+      nodePort: 31804  # Matches ALB target group port
   selector:
     app: polybot
   type: NodePort
