--- a/k8s/Polybot/service.yaml
+++ b/k8s/Polybot/service.yaml
@@ -7,10 +7,10 @@ metadata:
     app.kubernetes.io/instance: polybot-app
 spec:
   ports:
-    - name: http-port  # Changed to http-port since Flask uses HTTP
+    - name: https-port  # Changed to http-port since Flask uses HTTP
       port: 31804  # Service port exposed to Ingress
       protocol: TCP
-      targetPort: 31805  # Matches containerPort in deployment
+      targetPort: 31804  # Matches containerPort in deployment
       nodePort: 31804  # Matches ALB target group port
   selector:
     app: polybot
