--- a/k8s/Polybot/service.yaml
+++ b/k8s/Polybot/service.yaml
@@ -1,29 +1,16 @@
 apiVersion: v1
 kind: Service
 metadata:
-  annotations:
-    kubectl.kubernetes.io/last-applied-configuration: |
-      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app.kubernetes.io/instance":"polybot-app"},"name":"polybot-service","namespace":"default"},"spec":{"clusterIP":"10.97.15.96","clusterIPs":["10.97.15.96"],"externalTrafficPolicy":"Cluster","internalTrafficPolicy":"Cluster","ipFamilies":["IPv4"],"ipFamilyPolicy":"SingleStack","ports":[{"name":"https-port","nodePort":31804,"port":31804,"protocol":"TCP","targetPort":31804}],"selector":{"app":"polybot"},"sessionAffinity":"None","type":"NodePort"}}
-  labels:
-    app.kubernetes.io/instance: polybot-app
   name: polybot-service
   namespace: default
+  labels:
+    app.kubernetes.io/instance: polybot-app
 spec:
-  clusterIP: 10.97.15.96
-  clusterIPs:
-    - 10.97.15.96
-  externalTrafficPolicy: Cluster
-  internalTrafficPolicy: Cluster
-  ipFamilies:
-    - IPv4
-  ipFamilyPolicy: SingleStack
   ports:
     - name: https-port
-      #nodePort: 31804
-      port: 31804
+      port: 31804  # Adjust to 443 if app uses HTTPS
       protocol: TCP
-      targetPort: 31804
+      targetPort: 31804  # Match containerPort from Deployment
   selector:
     app: polybot
-  sessionAffinity: None
-  type: NodePort
+  type: ClusterIP  # Changed from NodePort since Ingress is used
