--- a/k8s/Polybot/ingress.yaml
+++ b/k8s/Polybot/ingress.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-    - host: omer-polybot-lb.devops-int-college.com
+    - host: omer-polybot-LB.devops-int-college.com
       http:
         paths:
           - path: /
