--- a/k8s/yolo5/service.yaml
+++ b/k8s/yolo5/service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: yolo5-service
+  name: svc-yolo5
+  namespace: default
 spec:
   selector:
     app: yolo5
   ports:
-    - name: http-port
-      port: 5000
-      targetPort: 5000
-  type: ClusterIP  # Instead of NodePort, but may not be needed at all
+    - protocol: TCP
+      port: 8081
+      targetPort: 8081
