--- a/k8s/yolo5/deployment.yaml
+++ b/k8s/yolo5/deployment.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: yolo5
-          image: omerk160/yolo5:v1.0.60
+          image: omerk160/yolo5:1.0.60
           env:
             - name: S3_BUCKET_NAME
               value: omer-polybot-bucket
