--- a/k8s/yolo5/deployment.yaml
+++ b/k8s/yolo5/deployment.yaml
@@ -5,14 +5,8 @@ metadata:
   namespace: default
   labels:
     app: yolo5
-
-tolerations:
-  - key: "node.kubernetes.io/disk-pressure"
-    operator: "Exists"
-    effect: "NoSchedule"
-
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: yolo5
@@ -28,7 +22,4 @@ spec:
             - name: S3_BUCKET_NAME
               value: omer-polybot-bucket
             - name: SQS_QUEUE_URL
-              valueFrom:
-                secretKeyRef:
-                  name: omer-polybot-secrets
-                  key: SQS_QUEUE_URL
+              value: https://sqs.eu-north-1.amazonaws.com/352708296901/omer-polybot-queue
