--- a/k8s/Polybot/ingress.yaml
+++ b/k8s/Polybot/ingress.yaml
@@ -12,6 +12,6 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: polybot-service
+                name: svc-polybot
                 port:
                   number: 80
